--- a/project.html
+++ b/project.html
@@ -34,15 +34,15 @@
     <ul>
         <li><a class="Search" href="">Search<i class='bx bx-search'></i></a></li>
         <li><a class="buy" href="https://www.microsoft.com/en-us/microsoft-365/business/compare-all-microsoft-365-business-products">Buy Now</a></li>
-        <li><a class="Sign-in" href="">Sign in</a></li></ul>
+        <li><a class="Sign-in" href="https://kunalgehlot73.github.io/Outlook/">Sign in</a></li></ul>
 </div>
 <div class="poster">
     <div class="text-outlook">
         <p class="text-outlookinside" style="font-size: 30px; font-weight: bold;">Outlook for everyday email <br/>and calendars</p>
         <p class="stay">Stay on top of multiple accounts with email, calendars, and<br/> contacts in one place. Available on desktop, mobile, and web.</p>
         <div class="button">
-            <button id="button-1">Sign in</button>
-            <button id="button-2">Create an Acoount</button>
+            <button id="button-1" type="button" onclick="window.location.href='https://kunalgehlot73.github.io/Outlook/'">Sign in</button>
+            <button id="button-2"  type="button" onclick="window.location.href='https://kunalgehlot73.github.io/Outlook/'">Create an Acoount</button>
         </div>
     </div>
     <div class="email-image">
